# paricarde

./: README.md  pyproject.toml
src/paricarde/: app.py
src/paricarde/static/: countdown.js  style.css
src/paricarde/templates/: base.html  index.html  race.html  registration.html  rider.html  riders.html
